--- a/exp.ipynb
+++ b/exp.ipynb
@@ -624,6 +624,591 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "yfinance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yfinance as yf\n",
+    "appl = yf.Ticker(\"APPL\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'APPL'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "appl.ticker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stock_data = yf.Ticker(\"AAPL\")\n",
+    "    # Get historical market data\n",
+    "hist_data = stock_data.history(period=\"max\")\n",
+    "\n",
+    "hlcv_data = hist_data[['Open', 'High', 'Low', 'Close', 'Volume']]\n",
+    "hlcv_data.index=hlcv_data.index.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-12-12</th>\n",
+       "      <td>0.099058</td>\n",
+       "      <td>0.099488</td>\n",
+       "      <td>0.099058</td>\n",
+       "      <td>0.099058</td>\n",
+       "      <td>469033600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-15</th>\n",
+       "      <td>0.094320</td>\n",
+       "      <td>0.094320</td>\n",
+       "      <td>0.093890</td>\n",
+       "      <td>0.093890</td>\n",
+       "      <td>175884800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-16</th>\n",
+       "      <td>0.087429</td>\n",
+       "      <td>0.087429</td>\n",
+       "      <td>0.086999</td>\n",
+       "      <td>0.086999</td>\n",
+       "      <td>105728000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-17</th>\n",
+       "      <td>0.089152</td>\n",
+       "      <td>0.089582</td>\n",
+       "      <td>0.089152</td>\n",
+       "      <td>0.089152</td>\n",
+       "      <td>86441600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-18</th>\n",
+       "      <td>0.091737</td>\n",
+       "      <td>0.092167</td>\n",
+       "      <td>0.091737</td>\n",
+       "      <td>0.091737</td>\n",
+       "      <td>73449600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-19</th>\n",
+       "      <td>224.820007</td>\n",
+       "      <td>226.800003</td>\n",
+       "      <td>223.279999</td>\n",
+       "      <td>224.309998</td>\n",
+       "      <td>49151500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-22</th>\n",
+       "      <td>227.009995</td>\n",
+       "      <td>227.779999</td>\n",
+       "      <td>223.089996</td>\n",
+       "      <td>223.960007</td>\n",
+       "      <td>48201800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-23</th>\n",
+       "      <td>224.369995</td>\n",
+       "      <td>226.940002</td>\n",
+       "      <td>222.679993</td>\n",
+       "      <td>225.009995</td>\n",
+       "      <td>39960300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-24</th>\n",
+       "      <td>224.000000</td>\n",
+       "      <td>224.800003</td>\n",
+       "      <td>217.130005</td>\n",
+       "      <td>218.539993</td>\n",
+       "      <td>61777600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-25</th>\n",
+       "      <td>218.929993</td>\n",
+       "      <td>220.850006</td>\n",
+       "      <td>214.619995</td>\n",
+       "      <td>217.490005</td>\n",
+       "      <td>51328200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10995 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open        High         Low       Close     Volume\n",
+       "Date                                                                 \n",
+       "1980-12-12    0.099058    0.099488    0.099058    0.099058  469033600\n",
+       "1980-12-15    0.094320    0.094320    0.093890    0.093890  175884800\n",
+       "1980-12-16    0.087429    0.087429    0.086999    0.086999  105728000\n",
+       "1980-12-17    0.089152    0.089582    0.089152    0.089152   86441600\n",
+       "1980-12-18    0.091737    0.092167    0.091737    0.091737   73449600\n",
+       "...                ...         ...         ...         ...        ...\n",
+       "2024-07-19  224.820007  226.800003  223.279999  224.309998   49151500\n",
+       "2024-07-22  227.009995  227.779999  223.089996  223.960007   48201800\n",
+       "2024-07-23  224.369995  226.940002  222.679993  225.009995   39960300\n",
+       "2024-07-24  224.000000  224.800003  217.130005  218.539993   61777600\n",
+       "2024-07-25  218.929993  220.850006  214.619995  217.490005   51328200\n",
+       "\n",
+       "[10995 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hlcv_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  High         Low       Close     Volume\n",
+      "Date                                                     \n",
+      "1980-12-12    0.099488    0.099058    0.099058  469033600\n",
+      "1980-12-15    0.094320    0.093890    0.093890  175884800\n",
+      "1980-12-16    0.087429    0.086999    0.086999  105728000\n",
+      "1980-12-17    0.089582    0.089152    0.089152   86441600\n",
+      "1980-12-18    0.092167    0.091737    0.091737   73449600\n",
+      "...                ...         ...         ...        ...\n",
+      "2024-07-19  226.800003  223.279999  224.309998   49151500\n",
+      "2024-07-22  227.779999  223.089996  223.960007   48201800\n",
+      "2024-07-23  226.940002  222.679993  225.009995   39960300\n",
+      "2024-07-24  224.800003  217.130005  218.539993   61777600\n",
+      "2024-07-25  220.850006  214.619995  217.490005   51328200\n",
+      "\n",
+      "[10995 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "def get_hlcv_data(ticker):\n",
+    "    # Fetch the data\n",
+    "    stock_data = yf.Ticker(ticker)\n",
+    "    # Get historical market data\n",
+    "    hist_data = stock_data.history(period=\"max\")\n",
+    "    \n",
+    "    # Select the required columns\n",
+    "    hlcv_data = hist_data[['High', 'Low', 'Close', 'Volume']]\n",
+    "    hlcv_data.index=hlcv_data.index.strftime('%Y-%m-%d')\n",
+    "    return hlcv_data\n",
+    "\n",
+    "# Example usage\n",
+    "ticker = \"AAPL\"  # Replace with your desired ticker\n",
+    "hlcv_data = get_hlcv_data(ticker)\n",
+    "print(hlcv_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hlcv_data.index=hlcv_data.index.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2024-03-04</th>\n",
+       "      <td>176.660373</td>\n",
+       "      <td>173.554585</td>\n",
+       "      <td>174.862823</td>\n",
+       "      <td>81510100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-05</th>\n",
+       "      <td>171.806970</td>\n",
+       "      <td>169.390249</td>\n",
+       "      <td>169.889572</td>\n",
+       "      <td>95132400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-06</th>\n",
+       "      <td>171.008054</td>\n",
+       "      <td>168.451508</td>\n",
+       "      <td>168.890915</td>\n",
+       "      <td>68587700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-07</th>\n",
+       "      <td>170.498740</td>\n",
+       "      <td>168.261784</td>\n",
+       "      <td>168.771088</td>\n",
+       "      <td>71765100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-08</th>\n",
+       "      <td>173.464712</td>\n",
+       "      <td>168.711165</td>\n",
+       "      <td>170.498734</td>\n",
+       "      <td>76114600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-19</th>\n",
+       "      <td>226.800003</td>\n",
+       "      <td>223.279999</td>\n",
+       "      <td>224.309998</td>\n",
+       "      <td>49151500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-22</th>\n",
+       "      <td>227.779999</td>\n",
+       "      <td>223.089996</td>\n",
+       "      <td>223.960007</td>\n",
+       "      <td>48201800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-23</th>\n",
+       "      <td>226.940002</td>\n",
+       "      <td>222.679993</td>\n",
+       "      <td>225.009995</td>\n",
+       "      <td>39960300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-24</th>\n",
+       "      <td>224.800003</td>\n",
+       "      <td>217.130005</td>\n",
+       "      <td>218.539993</td>\n",
+       "      <td>61777600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-07-25</th>\n",
+       "      <td>220.850006</td>\n",
+       "      <td>214.619995</td>\n",
+       "      <td>217.490005</td>\n",
+       "      <td>51328200</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  High         Low       Close    Volume\n",
+       "Date                                                    \n",
+       "2024-03-04  176.660373  173.554585  174.862823  81510100\n",
+       "2024-03-05  171.806970  169.390249  169.889572  95132400\n",
+       "2024-03-06  171.008054  168.451508  168.890915  68587700\n",
+       "2024-03-07  170.498740  168.261784  168.771088  71765100\n",
+       "2024-03-08  173.464712  168.711165  170.498734  76114600\n",
+       "...                ...         ...         ...       ...\n",
+       "2024-07-19  226.800003  223.279999  224.309998  49151500\n",
+       "2024-07-22  227.779999  223.089996  223.960007  48201800\n",
+       "2024-07-23  226.940002  222.679993  225.009995  39960300\n",
+       "2024-07-24  224.800003  217.130005  218.539993  61777600\n",
+       "2024-07-25  220.850006  214.619995  217.490005  51328200\n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hlcv_data.tail(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1980-12-12'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "s =  '1980-12-12 00:00:00-05:00'\n",
+    "s[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datetime.strptime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('1980-12-12 00:00:00-0500', tz='America/New_York')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hlcv_data.index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ALPHA_VANTAGE_API_KEY = \"9IPNO0EZ1SWSSHDV\"\n",
+    "# import requests\n",
+    "# import pandas as pd\n",
+    "\n",
+    "# def fetchStockData(symbol):\n",
+    "#     url = f'https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol={symbol}&apikey={ALPHA_VANTAGE_API_KEY}'\n",
+    "#     response = requests.get(url)\n",
+    "#     data = response.json()\n",
+    "#     data = pd.DataFrame(data['Time Series (Daily)']).T\n",
+    "#     data = data.rename(columns={\n",
+    "#         '1. open': 'Open',\n",
+    "#         '2. high': 'High',\n",
+    "#         '3. low': 'Low',\n",
+    "#         '4. close': 'Close',\n",
+    "#         '5. volume': 'Volume'\n",
+    "#     })\n",
+    "#     data = data.sort_index()\n",
+    "#     numeric_columns = ['Open', 'High', 'Low', 'Close', 'Volume']\n",
+    "#     data[numeric_columns] = data[numeric_columns].apply(pd.to_numeric)\n",
+    "#     return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# symbol = 'APPL'\n",
+    "# url = f'https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol={symbol}&apikey={ALPHA_VANTAGE_API_KEY}'\n",
+    "# response = requests.get(url)\n",
+    "# data = response.json()\n",
+    "data = pd.DataFrame(data['Time Series (Daily)']).T\n",
+    "data = data.rename(columns={\n",
+    "    '1. open': 'Open',\n",
+    "    '2. high': 'High',\n",
+    "    '3. low': 'Low',\n",
+    "    '4. close': 'Close',\n",
+    "    '5. volume': 'Volume'\n",
+    "})\n",
+    "data = data.sort_index()\n",
+    "numeric_columns = ['Open', 'High', 'Low', 'Close', 'Volume']\n",
+    "data[numeric_columns] = data[numeric_columns].apply(pd.to_numeric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Information': 'Thank you for using Alpha Vantage! Our standard API rate limit is 25 requests per day. Please subscribe to any of the premium plans at https://www.alphavantage.co/premium/ to instantly remove all daily rate limits.'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Time Series (Daily)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m paid_data \u001b[38;5;241m=\u001b[39m \u001b[43mfetchStockData\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAPPL\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m paid_data\n",
+      "Cell \u001b[1;32mIn[20], line 9\u001b[0m, in \u001b[0;36mfetchStockData\u001b[1;34m(symbol)\u001b[0m\n\u001b[0;32m      7\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[0;32m      8\u001b[0m data \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m----> 9\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mTime Series (Daily)\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\u001b[38;5;241m.\u001b[39mT\n\u001b[0;32m     10\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1. open\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOpen\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2. high\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHigh\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m5. volume\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVolume\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     16\u001b[0m })\n\u001b[0;32m     17\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39msort_index()\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Time Series (Daily)'"
+     ]
+    }
+   ],
+   "source": [
+    "paid_data = fetchStockData('APPL')\n",
+    "paid_data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
